# Memory_Allocator

./: CMakeLists.txt  README.md
src/: core.c  core.h  log.c  log.h  main.c  memory.c  memory.h
